@@ -41,3 +41,5 @@ Contributors:
         - patch to fix an error in the avr32 user flash dump command
     - Dave Fletcher
         - patch to enable atmega32u2 chips
+    - Torsten Rottmann
+        - patch to enable libusb 1.0 support
