@@ -14,13 +14,52 @@ AM_MAINTAINER_MODE
 # Checks for programs.
 AC_PROG_CC
 
-# Checks for libraries.
-AC_CHECK_LIB([usb], [usb_control_msg],,
-                            [AC_MSG_ERROR([libusb not found])] )
+# Checks for libusb - from sane-backends configuration
+
+dnl Enable libusb-1.0, if available
+AC_ARG_ENABLE(libusb_1_0,
+	AC_HELP_STRING([--disable-libusb_1_0], [disable libusb-1.0 support if available]),
+	[disable_libusb_1_0=$enableval], [disable_libusb_1_0=no])
+
+dnl If libusb-1.0 is enabled and available, prefer that to the old libusb
+have_libusb_1_0=no
+if test "$disable_libusb_1_0" = "no"; then
+  PKG_CHECK_MODULES(LIBUSB_1_0, [ libusb-1.0 >= 1.0.0 ], have_libusb_1_0=yes, have_libusb_1_0=no)
+  if test "$have_libusb_1_0" = "yes"; then
+    CFLAGS="$CFLAGS $LIBUSB_1_0_CFLAGS"
+    LDFLAGS="$LDFLAGS $LIBUSB_1_0_LIBS"
+    HAVE_USB=yes
+  fi
+fi
+
+if test "$have_libusb_1_0" = "no"; then
+  dnl Fallback to the old libusb
+  dnl libusb >= 0.1.8 is required, as we need usb_interrupt_read()
+  AC_CHECK_HEADER(usb.h,
+                  AC_CHECK_LIB(usb, usb_interrupt_read, 
+                               [LDFLAGS="$LDFLAGS -lusb"
+                                HAVE_USB=yes]))
+fi
+
+dnl The following logic is useful for distributions.  If they force
+dnl USB support with --enable-libusb=yes then configure will fail
+dnl when its detected that it can not be supported.  Default is
+dnl "auto" which means only enable if libraries are found and do
+dnl not error out.
+if test "$HAVE_USB" = "no"; then
+  AC_MSG_ERROR([USB support requested but required libraries not found.])
+fi
+if test "$HAVE_USB" = "yes"; then
+  if test "$have_libusb_1_0" = "yes"; then
+    AC_DEFINE(HAVE_LIBUSB_1_0, 1, [Define to 1 if you have libusb-1.0.])
+  else
+    AC_DEFINE(HAVE_LIBUSB, 1, [Define to 1 if you have libusb.])
+  fi
+fi
+
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([usb.h stdlib.h string.h stdio.h errno.h stdarg.h stddef.h stdint.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
